--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "@googlemaps/js-api-loader": "^1.16.6",
     "@hookform/resolvers": "^3.6.0",
     "@maptiler/sdk": "^2.2.1",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.0.3",
     "@reduxjs/toolkit": "^2.3.0",
     "@types/google.maps": "^3.55.7",
     "@types/leaflet": "^1.9.12",
+    "@types/mdx": "^2.0.13",
     "@types/react-modal": "^3.16.3",
     "antd": "^5.16.2",
     "js-cookie": "^3.0.5",
@@ -33,6 +37,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
     "react-leaflet": "^4.2.1",
+    "react-markdown": "^9.0.1",
     "react-redux": "^9.1.2",
     "react-static-google-map": "^0.9.0",
     "sharp": "^0.33.5",
