--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-hook-form": "^7.51.5",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
+    "react-intersection-observer": "^9.13.1",
     "react-leaflet": "^4.2.1",
     "react-markdown": "^9.0.1",
     "react-redux": "^9.1.2",
