--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/mdx": "^2.0.13",
     "@types/react-modal": "^3.16.3",
     "antd": "^5.16.2",
+    "axios": "^1.7.9",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "next": "14.1.3",
