--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.7.9",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
+    "mapbox-gl": "^3.12.0",
     "next": "14.1.3",
     "next-intl": "^3.14.1",
     "normalize.css": "^8.0.1",
@@ -39,6 +40,7 @@
     "react-icons": "^5.1.0",
     "react-intersection-observer": "^9.13.1",
     "react-leaflet": "^4.2.1",
+    "react-map-gl": "^8.0.4",
     "react-markdown": "^9.0.1",
     "react-redux": "^9.1.2",
     "react-static-google-map": "^0.9.0",
