--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.7.9",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
+    "lodash": "^4.17.21",
     "mapbox-gl": "^3.12.0",
     "next": "14.1.3",
     "next-intl": "^3.14.1",
@@ -49,6 +50,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.17",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
